@@ -9,6 +9,14 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id 'application'
+}
+application {
+    mainClass = 'org.dynamics.Library'  // Replace with your main class name
+}
+
+run {
+    jvmArgs '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED'
 }
 
 repositories {
